--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.22",
-    "next": "^15.3.1",
+    "next": "15.3.6",
     "next-themes": "^0.4.6",
     "pg": "^8.11.3",
     "qs": "^6.12.1",
