--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
+    "react-jwt": "^2.0.0",
     "react-razorpay": "^3.0.1",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.2.1",
